# chemx

./: README.md  pyproject.toml
docs/: architecture.md  coding_architecture.md  install.md  run.md
src/chemx/: __init__.py  __main__.py
src/chemx/backends/: __init__.py  base.py  http.py  lifecycle.py  registry.py
src/chemx/backends/deepseek/: __init__.py  backend.py
src/chemx/backends/ollama/: __init__.py  backend.py  runtime.py
src/chemx/backends/openai/: __init__.py  backend.py
src/chemx/core/: __init__.py  agent.py  context.py  observability.py
src/chemx/core/chemicals/: __init__.py  agent.py  loop.py
src/chemx/core/coding/: __init__.py  action.py  agent.py  context.py  lifecycle.py  local_workspace.py  loop.py  plan.py  router.py  session.py  workflow.py  workspace.py
src/chemx/frontends/: __init__.py
src/chemx/frontends/cli/: __init__.py  app.py  prompt.py
src/chemx/tools/: __init__.py  command.py  filesystem.py  git.py  search.py
tests/: test_actions.py  test_agent.py  test_chemicals.py  test_coding.py  test_frontends.py  test_models.py  test_observability.py  test_prompt.py  test_tools.py  test_workflow_routing.py  test_workspace.py
