[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "chemx"
version = "0.1.0"
description = "A small AI agent with extensible model backends and frontends."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "chemx contributors" },
]
dependencies = [
    "prompt-toolkit>=3.0.48,<4",
]

[project.scripts]
chemx = "chemx.frontends.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
